examples/k8s-tomcat-cluster/tomcat/tomcat-member.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-membership
  labels:
    app: tomcat
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
    description: "Service for tomcat cluster membership."
spec:
  clusterIP: None
  selector:
    app: tomcat
  ports:
  - name: member
    port: 4000
    targetPort: member
    protocol: TCP
