examples/k8s-tomcat-cluster/tomcat/tomcat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat
  labels:
    app: tomcat
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: "TSESSIONID"
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "false"
    traefik.ingress.kubernetes.io/service.sticky.cookie.httponly: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.samesite: "strict"
spec:
  selector:
    app: tomcat
  ports:
  - name: http
    port: 8080
    targetPort: http
