examples/k8s-tomcat-cluster/tomcat/tomcat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: tomcat-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
  labels:
    app: tomcat
  name: tomcat
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - tomcat.dev
    secretName: tomcat-dev
  rules:
  - host: tomcat.dev
    http:
      paths:
      - backend:
          service:
            name: tomcat
            port:
              number: 8080
        path: /
        pathType: Prefix
